# rust_ai_core_stack

./: README.md
lancedb/: RUST_THIRD_PARTY_LICENSES.html
lancedb/python/: RUST_THIRD_PARTY_LICENSES.html
openfang/crates/openfang-api/src/: channel_bridge.rs  server.rs  ws.rs
openfang/crates/openfang-api/tests/: api_integration_test.rs
openfang/crates/openfang-types/src/: agent.rs
qdrant/.github/workflows/: long-e2e-tests.yml
qdrant/lib/collection/src/operations/: config_diff.rs
qdrant/lib/collection/src/shards/shard_holder/: mod.rs
qdrant/lib/common/common/src/universal_io/io_uring/: mod.rs  runtime.rs
qdrant/lib/segment/src/common/: buffered_update_bitslice.rs
qdrant/lib/segment/src/index/field_index/: index_selector.rs
qdrant/lib/segment/src/index/field_index/full_text_index/inverted_index/: immutable_inverted_index.rs
qdrant/lib/segment/src/index/field_index/full_text_index/inverted_index/mmap_inverted_index/: create_postings.rs  mmap_postings_enum.rs  types.rs
qdrant/lib/segment/src/vector_storage/multi_dense/: appendable_mmap_multi_dense_vector_storage.rs
qdrant/lib/segment/src/vector_storage/quantized/: quantized_vectors.rs
qdrant/lib/storage/src/content_manager/: conversions.rs
qdrant/src/common/: metrics.rs
qdrant/src/tonic/api/storage_read_api/: tests.rs
rust_markdown_transformer/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust_markdown_transformer/.github/workflows/: release.yml
rust_markdown_transformer/examples/: convert.rs  usage.py
rust_markdown_transformer/src/: chunker.rs  error.rs  ir.rs  lib.rs  python.rs  registry.rs  renderer.rs
rust_markdown_transformer/src/parsers/: docx.rs  html.rs  hwpx.rs  markdown.rs  media.rs  mod.rs  ooxml.rs  pdf.rs  pdf_layout.rs  pptx.rs  xlsx.rs
rust_markdown_transformer/tests/: integration.rs
rust_scholar_transformer/: Cargo.toml  README.md  pyproject.toml
rust_scholar_transformer/.github/workflows/: release.yml
rust_scholar_transformer/src/: cache.rs  dedup.rs  engine.rs  error.rs  fusion.rs  lib.rs  model.rs  normalize.rs  python.rs  ratelimit.rs  source.rs
rust_scholar_transformer/src/sources/: arxiv.rs  arxiv_oai.rs  feed_common.rs  mod.rs  news.rs  rss.rs  web.rs  youtube.rs
rust_scholar_transformer/tests/: adapters_test.rs  arxiv_test.rs  feeds_test.rs
turbovec/: CHANGELOG.md  README.md
turbovec/turbovec/: Cargo.toml
turbovec/turbovec-python/: Cargo.toml  pyproject.toml
turbovec/turbovec-python/python/turbovec/: agno.py  haystack.py  langchain.py  llama_index.py
turbovec/turbovec-python/src/: lib.rs
turbovec/turbovec-python/tests/: test_agno.py  test_haystack.py  test_langchain.py  test_llama_index.py
turbovec/turbovec/src/: lib.rs  search.rs
turbovec/turbovec/tests/: encode.rs  lazy_init.rs
