[package]
name        = "rust_markdown_transformer"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description  = "Deterministic, structure-preserving document → Markdown converter for vector DB / RAG ingestion."
repository   = "https://github.com/arabangoo/rust_markdown_transformer"
readme       = "README.md"
keywords     = ["markdown", "rag", "docx", "parser", "vector-db"]
categories   = ["text-processing", "parser-implementations"]

# ── 독립성 원칙(§1-4): default 와 pure-rust 그룹은 zero FFI / zero subprocess ──
# ── FFI 가 필요한 기능(pdfium, tesseract)은 사용자가 명시 opt-in 한 경우만 활성화 ──

[lib]
name       = "rust_markdown_transformer"
# rlib: 일반 Rust 라이브러리/CLI/테스트용, cdylib: Python(PyO3) 확장 모듈용
crate-type = ["rlib", "cdylib"]

[features]
# pure Rust 파서들 (외부 .so/.dll 0)
default  = ["docx", "pptx", "xlsx", "hwpx", "pdf", "html", "markdown"]

docx     = ["dep:zip", "dep:quick-xml"]
pptx     = ["dep:zip", "dep:quick-xml"]
xlsx     = ["dep:calamine"]
hwpx     = ["dep:zip", "dep:quick-xml"]      # 한컴 OWPML (ZIP+XML), pure Rust
pdf      = ["dep:lopdf", "dep:pdf-extract"]  # pure Rust PDF (텍스트=pdf-extract, 메타=lopdf)
html     = ["dep:scraper"]
markdown = ["dep:pulldown-cmark"]

# CLI 바이너리 (rmt) — 라이브러리 소비자에겐 새지 않도록 opt-in. `cargo build --features cli`
cli      = ["dep:clap", "dep:rayon"]

# Python 바인딩 (cdylib) — `maturin develop --features python` (README §9)
python   = ["dep:pyo3"]

[dependencies]
thiserror  = "2"
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# pure Rust building blocks (FFI 없음, 정적 빌드 OK)
zip            = { version = "2",     optional = true, default-features = false, features = ["deflate"] }
quick-xml      = { version = "0.37",  optional = true }
calamine       = { version = "0.26",  optional = true }
scraper        = { version = "0.21",  optional = true }
pulldown-cmark = { version = "0.12",  optional = true, default-features = false }
lopdf          = { version = "0.36",  optional = true }
pdf-extract    = { version = "0.9",   optional = true }

# CLI 전용 (feature = "cli")
clap           = { version = "4",      optional = true, features = ["derive"] }
rayon          = { version = "1",      optional = true }

# Python 바인딩 (feature = "python") — abi3 stable ABI 로 빌드해 Python 버전 forward-compatible
pyo3           = { version = "0.24",   optional = true, features = ["extension-module", "abi3-py39"] }

[[bin]]
name              = "rmt"
path              = "src/bin/rmt.rs"
required-features = ["cli"]

[dev-dependencies]
zip   = { version = "2", default-features = false, features = ["deflate"] }
lopdf = "0.36"   # 테스트에서 결정적 PDF 픽스처 합성용
