[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust_markdown_transformer"
description = "Deterministic, structure-preserving document → Markdown converter for vector DB / RAG ingestion (docx/pptx/xlsx/hwpx/pdf/html/markdown)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "rust_markdown_transformer contributors" }]
keywords = ["markdown", "rag", "vector-db", "docx", "pdf", "hwpx", "parser", "ingestion"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# version 은 Cargo.toml 의 package.version 에서 자동으로 가져온다 (dynamic).
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/arabangoo/rust_markdown_transformer"

[tool.maturin]
# Rust 의 #[pymodule] 함수명 = cdylib 이름과 일치해야 한다.
module-name = "rust_markdown_transformer"
# Python 바인딩(cdylib) 활성 feature. default 포맷(docx/pptx/xlsx/hwpx/pdf/html/markdown)은 그대로 켜진다.
features = ["python"]
# abi3(stable ABI) 휠 → Python 3.9+ 단일 휠로 호환.
